Fix overlapping on navbar

--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ nav > ul > li > a:active {
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
   padding: 0 120px;
+  z-index: 1;
 }
 
 /* side nav */
